[gd_scene load_steps=6 format=3 uid="uid://bnga7wtt1wqgo"]

[ext_resource type="Script" uid="uid://cv53dgwg8nnpa" path="res://Scripts/menu.gd" id="1_lnt83"]
[ext_resource type="Texture2D" uid="uid://den617moqtcux" path="res://Recursos/Menu.png" id="2_17m5t"]
[ext_resource type="Texture2D" uid="uid://don3b1ado1io3" path="res://Recursos/Victoria.png" id="2_kim34"]
[ext_resource type="FontFile" uid="uid://ddgeerjbshevg" path="res://Recursos/Daydream.ttf" id="3_cp3rd"]
[ext_resource type="Texture2D" uid="uid://dk5rbjatji81a" path="res://Recursos/Derrota.png" id="3_kim34"]

[node name="Menu" type="Node2D"]
process_mode = 3
script = ExtResource("1_lnt83")

[node name="Victoria" type="Sprite2D" parent="."]
visible = false
position = Vector2(568, 328)
scale = Vector2(0.752604, 0.644531)
texture = ExtResource("2_kim34")

[node name="Derrota" type="Sprite2D" parent="."]
visible = false
position = Vector2(572, 328)
scale = Vector2(0.763021, 0.660156)
texture = ExtResource("3_kim34")

[node name="Menu" type="Sprite2D" parent="."]
position = Vector2(577, 327)
scale = Vector2(0.753906, 0.647461)
texture = ExtResource("2_17m5t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 337.0
offset_top = 366.0
offset_right = 739.0
offset_bottom = 508.0
pivot_offset = Vector2(201, 77)
size_flags_horizontal = 4
size_flags_vertical = 4
localize_numeral_system = false
theme_override_constants/separation = 40

[node name="Rejugar" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_cp3rd")
theme_override_font_sizes/font_size = 30
text = "VOLVER A JUGAR"
flat = true

[node name="Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_cp3rd")
theme_override_font_sizes/font_size = 30
text = "JUGAR"
flat = true

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_cp3rd")
text = "SALIR"
flat = true

[connection signal="rejugar" from="." to="." method="_on_rejugar"]
[connection signal="pressed" from="VBoxContainer/Rejugar" to="." method="_on_rejugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
